Se cambiaron algunos ID por clases y se agrego gradiente en la nav

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+    <head>  
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,10 +13,10 @@
          <!--navbar-->
         <header id="navbar">
             <ul class="navbar--ul">
-                <li class="navbar--ul--li li-flex1"> 
+                <li class="navbar--ul--li flex1"> 
                         <a href="index.html"><img class="img-logo" src="./imagenes/landscape.png" alt="Inicio"></a>
                 </li>
-                <li class="navbar--ul--li li-flex2">
+                <li class="navbar--ul--li flex2">
                     <div class="dropdown">
                         <button class="boton--navbar">Lugares</button>
                             <div class="menu1">
@@ -27,14 +27,14 @@
                             </div>
                     </div>
                 </li>
-                <li class="navbar--ul--li li-flex3">
+                <li class="navbar--ul--li flex3">
                         <a class="navbar--ul--li--a" href="secciones/Ayuda.html">Contacto</a>
                 </li>
             </ul>
         </header>
          <!--barra flotante de redes-->
         <main>
-            <ul id="barra">
+            <ul class="barra">
                 <li>
                     <a href="https://www.instagram.com/" target="_blank">
                         <img class="bar-icon" src="imagenes/instagram_icon_64 (1).png" alt="instagram icon">
@@ -97,7 +97,7 @@
                     </div>    
                 </div>
                 <div id="d5">
-                    <div class="arriba--izquierda">
+                    <div class="arriba--izquierda>
                         <div class="info-lugares">
                             <p>
                                 Las cataratas del Iguazú,son un conjunto de cataratas que se localizan sobre el río Iguazú, en el límite entre la provincia argentina de Misiones y el estado brasileño de Paraná. Están totalmente insertadas en áreas protegidas; el sector de la Argentina se encuentra dentro del parque nacional Iguazú, mientras que el de Brasil se encuentra en el parque nacional do Iguaçu. Fueron elegidas como una de las «Siete maravillas naturales del mundo».
