--- a/secciones/section3.html
+++ b/secciones/section3.html
@@ -12,10 +12,10 @@
 <body>
     <header id="navbar">
         <ul class="navbar--ul">
-            <li class="navbar--ul--li li-flex1"> 
+            <li class="navbar--ul--li flex1"> 
                 <a href="../index.html"><img class="img-logo" src="../imagenes/landscape.png" alt="Inicio"></a>
             </li>
-            <li class="navbar--ul--li li-flex2">
+            <li class="navbar--ul--li flex2">
                 <div class="dropdown">
                     <button class="boton--navbar">Lugares</button>
                     <div class="menu1">
@@ -26,13 +26,13 @@
                     </div>
                 </div>
             </li>
-            <li class="navbar--ul--li li-flex3">
+            <li class="navbar--ul--li flex3">
                 <a class="navbar--ul--li--a" href="Ayuda.html">Contacto</a>
             </li>
         </ul>
     </header>
-    <main id="glaciar">
-        <ul id="barra">
+    <main class="glaciar">
+        <ul class="barra">
             <li>
                 <a href="https://www.instagram.com/" target="_blank">
                     <img class="bar-icon" src="../imagenes/instagram_icon_64 (1).png" alt="instagram icon">
