Se corrigieron algunos errores de responsive design

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </div>    
                 </div>
                 <div id="d5">
-                    <div class="arriba--izquierda>
+                    <div class="arriba--izquierda">
                         <div class="info-lugares">
                             <p>
                                 Las cataratas del Iguazú,son un conjunto de cataratas que se localizan sobre el río Iguazú, en el límite entre la provincia argentina de Misiones y el estado brasileño de Paraná. Están totalmente insertadas en áreas protegidas; el sector de la Argentina se encuentra dentro del parque nacional Iguazú, mientras que el de Brasil se encuentra en el parque nacional do Iguaçu. Fueron elegidas como una de las «Siete maravillas naturales del mundo».
