--- a/secciones/section2.html
+++ b/secciones/section2.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +15,7 @@
     <link rel="shortcut icon" href="../imagenes/landscape.png" type="image/png" />
 </head>
     <body>
-        <header id="navbar">
+        <header class="navbar">
                 <ul class="navbar--ul">
                     <li class="navbar--ul--li flex1"> 
                         <a href="../index.html"><img class="img-logo" src="../imagenes/landscape.png" alt="Inicio"></a>
@@ -35,32 +40,32 @@
             <ul class="barra">
                 <li>
                     <a href="https://www.instagram.com/" target="_blank">
-                        <img class="bar-icon" src="../imagenes/instagram_icon_64 (1).png" alt="instagram icon">
+                        <img class="bar-icon  animate__animated animate__bounceInRight" src="../imagenes/instagram_icon_64 (1).png" alt="instagram icon">
                     </a>
                 </li>
                 <li>
                     <a href="https://www.youtube.com/" target="_blank">
-                        <img class="bar-icon" src="../imagenes/youtube_icon_64.png" alt="youtube icon">
+                        <img class="bar-icon animate__animated animate__bounceInUp" src="../imagenes/youtube_icon_64.png" alt="youtube icon">
                     </a>
                 </li>
                 <li>
                     <a href="https://www.facebook.com/" target="_blank">
-                        <img class="bar-icon" src="../imagenes/facebook_icon_64.png" alt="facebook icon">
+                        <img class="bar-icon animate__animated animate__bounceInDown" src="../imagenes/facebook_icon_64.png" alt="facebook icon">
                     </a>
                 </li>
             </ul>
             <section class="seccion-lugares">
                 <h1 class="seccion-lugares--h1">Parque Nacional Talampaya</h1>
                 <img class="img-lugares" src="../imagenes/talampaya2.jpg" alt="Talampaya">
-                <p class="seccion-lugares--p"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, iusto optio? Consequuntur id asperiores qui earum ipsa tempora assumenda minus adipisci non quibusdam, magnam amet atque eius aspernatur omnis perferendis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis temporibus inventore architecto, dolor autem tempora suscipit a itaque facilis sunt minima sequi doloribus, ad doloremque enim. Est, autem nemo. Quis.</p>
-                <h2 class="seccion-lugares--h2">Atracciones principales</h2>
-                <p class="seccion-lugares--p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate mollitia quo eligendi fugit rem illum ducimus nesciunt quia iste ad nemo molestias ratione exercitationem rerum, quibusdam distinctio consequuntur optio accusantium.</p>
-                <h2 class="seccion-lugares--h2">Cómo llegar</h2>
-                <p class="seccion-lugares--p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex iusto laborum harum. Quam pariatur, delectus id aut quisquam repellendus fugiat error iusto ex eligendi veritatis harum repudiandae unde consectetur facere.</p>
+                <p data-aos="fade-left" data-aos-duration="1250" class="seccion-lugares--p"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, iusto optio? Consequuntur id asperiores qui earum ipsa tempora assumenda minus adipisci non quibusdam, magnam amet atque eius aspernatur omnis perferendis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis temporibus inventore architecto, dolor autem tempora suscipit a itaque facilis sunt minima sequi doloribus, ad doloremque enim. Est, autem nemo. Quis.</p>
+                <h2 data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--h2">Atracciones principales</h2>
+                <p data-aos="fade-left" data-aos-duration="1250" class="seccion-lugares--p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate mollitia quo eligendi fugit rem illum ducimus nesciunt quia iste ad nemo molestias ratione exercitationem rerum, quibusdam distinctio consequuntur optio accusantium.</p>
+                <h2 data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--h2">Cómo llegar</h2>
+                <p data-aos="fade-left" data-aos-duration="1250" class="seccion-lugares--p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex iusto laborum harum. Quam pariatur, delectus id aut quisquam repellendus fugiat error iusto ex eligendi veritatis harum repudiandae unde consectetur facere.</p>
                 <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d110721.2046099702!2d-67.94412665930871!3d-29.8631881890198!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9682cfaa7f5b4c51%3A0xd4008391c6014968!2sParque%20Nacional%20Talampaya!5e0!3m2!1ses-419!2sar!4v1647625270304!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                <h2 class="seccion-lugares--h2">Recomendaciones</h2>
-                <p class="seccion-lugares--p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, unde fugit? Voluptate aliquam doloremque eveniet atque rerum repellat! Atque voluptas voluptatum iste unde quae fugiat praesentium reiciendis nihil voluptatem error.</p>
-                <h2 class="seccion-lugares--h2">Galería</h2>
+                <h2 data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--h2">Recomendaciones</h2>
+                <p data-aos="fade-left" data-aos-duration="1250" class="seccion-lugares--p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, unde fugit? Voluptate aliquam doloremque eveniet atque rerum repellat! Atque voluptas voluptatum iste unde quae fugiat praesentium reiciendis nihil voluptatem error.</p>
+                <h2 data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--h2">Galería</h2>
                 <ul class=ul-img-lugares>
                     <li class="ul-img-lugares--li"><img src="../imagenes/talampaya.jpg" alt="talampaya1"></li>
                     <li class="ul-img-lugares--li"><img src="../imagenes/talampaya2.jpg" alt="talampaya2"></li>
@@ -76,5 +81,9 @@
                 </div>
             </section>
         </footer>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
     </body>
 </html>
