--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>  
+    <head>
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>  
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +16,7 @@
     </head>
     <body>
          <!--navbar-->
-        <header id="navbar">
+        <header class="navbar">
             <ul class="navbar--ul">
                 <li class="navbar--ul--li flex1"> 
                         <a href="index.html"><img class="img-logo" src="./imagenes/landscape.png" alt="Inicio"></a>
@@ -37,23 +42,23 @@
             <ul class="barra">
                 <li>
                     <a href="https://www.instagram.com/" target="_blank">
-                        <img class="bar-icon" src="imagenes/instagram_icon_64 (1).png" alt="instagram icon">
+                        <img class="bar-icon  animate__animated animate__bounceInRight" src="imagenes/instagram_icon_64 (1).png" alt="instagram icon">
                     </a>
                 </li>
                 <li>
                     <a href="https://www.youtube.com/" target="_blank">
-                        <img class="bar-icon" src="imagenes/youtube_icon_64.png" alt="youtube icon">
+                        <img class="bar-icon animate__animated animate__bounceInUp" src="imagenes/youtube_icon_64.png" alt="youtube icon">
                     </a>
                 </li>
                 <li>
                     <a href="https://www.facebook.com/" target="_blank">
-                        <img class="bar-icon" src="imagenes/facebook_icon_64.png" alt="facebook icon">
+                        <img class="bar-icon animate__animated animate__bounceInDown" src="imagenes/facebook_icon_64.png" alt="facebook icon">
                     </a>
                 </li>
             </ul>
              <!--parte principal-->
            <section id="s1">
-                <h1 class="titulo-centrado">
+                <h1 class="titulo-centrado animate__animated animate__fadeIn">
                 Paisajes
                 <br>
                 argentinos
@@ -64,8 +69,8 @@
              ¡Espero que les guste!
             </div>
             <section class="grid-index">
-                <div id="d2">
-                    <div class="abajo--izquierda">
+                <div class="d2">
+                    <div data-aos="fade-right" data-aos-duration="1250" class="abajo--izquierda">
                         <div class="info-lugares">
                             <p>El parque nacional Talampaya se encuentra ubicado en el centro-oeste de la provincia de La Rioja en
                             Argentina entre los departamentos de Coronel Felipe Varela e Independencia. Fue creado con el objetivo de proteger
@@ -76,8 +81,8 @@
                         <a href="secciones/section2.html" class="boton-info">Mas información</a>
                      </div>    
                 </div>
-                <div id="d3">
-                    <div class="arriba--izquierda">
+                <div class="d3">
+                    <div data-aos="fade-left" data-aos-duration="1250" class="arriba--izquierda">
                         <div class="info-lugares">
                             <p>El glaciar Perito Moreno es una gruesa masa de hielo ubicada en el departamento Lago Argentino de 
                             la provincia de Santa Cruz, en el sudoeste de la Argentina, en la región de la Patagonia.
@@ -87,8 +92,8 @@
                         <a href="secciones/section3.html" class="boton-info">Mas información</a>
                     </div>    
                 </div>
-                <div id="d4">
-                    <div class="abajo--izquierda">
+                <div class="d4">
+                    <div data-aos="fade-right" data-aos-duration="1250" class="abajo--izquierda">
                         <div class="info-lugares">
                             <p>El Parque Provincial de Ischigualasto, también llamado Valle de la Luna, se ubica en el noroeste de Argentina. Sus paisajes desérticos similares a la superficie lunar tienen formaciones rocosas impresionantes en áreas como el “Valle Pintado” y la “Cancha de Bochas”. En el museo del parque, se exhiben fósiles de dinosaurios del período Triásico.
                             </p>
@@ -96,8 +101,8 @@
                         <a href="secciones/section3.html" class="boton-info">Mas información</a>
                     </div>    
                 </div>
-                <div id="d5">
-                    <div class="arriba--izquierda">
+                <div class="d5">
+                    <div data-aos="fade-left" data-aos-duration="1250" class="arriba--izquierda">
                         <div class="info-lugares">
                             <p>
                                 Las cataratas del Iguazú,son un conjunto de cataratas que se localizan sobre el río Iguazú, en el límite entre la provincia argentina de Misiones y el estado brasileño de Paraná. Están totalmente insertadas en áreas protegidas; el sector de la Argentina se encuentra dentro del parque nacional Iguazú, mientras que el de Brasil se encuentra en el parque nacional do Iguaçu. Fueron elegidas como una de las «Siete maravillas naturales del mundo».
@@ -116,5 +121,9 @@
                 </div>
             </section>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     </body>
 </html>
