--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -68,48 +69,50 @@
             ¡Bienvenido a paisajes argentinos!<br> Acá vas a encontrar los lugares más recomendados para ver y visitar en el territorio argentino con su información correspondiente y las guías turísticas de cada lugar.
              ¡Espero que les guste!
             </div>
-            <section class="grid-index">
-                <div class="d2">
-                    <div data-aos="fade-right" data-aos-duration="1250" class="abajo--izquierda">
-                        <div class="info-lugares">
-                            <p>El parque nacional Talampaya se encuentra ubicado en el centro-oeste de la provincia de La Rioja en
-                            Argentina entre los departamentos de Coronel Felipe Varela e Independencia. Fue creado con el objetivo de proteger
-                            importantes yacimientos arqueológicos y
-                            paleontológicos de la zona y ocupa 213 800 ha.
-                            </p>
+            <section class="container-fluid">
+                <div class="row">
+                    <div class="d2 col-12 col-lg-6">
+                        <div data-aos="fade-right" data-aos-duration="1250" class="abajo--izquierda">
+                            <div class="info-lugares">
+                                <p>El parque nacional Talampaya se encuentra ubicado en el centro-oeste de la provincia de La Rioja en
+                                Argentina entre los departamentos de Coronel Felipe Varela e Independencia. Fue creado con el objetivo de proteger
+                                importantes yacimientos arqueológicos y
+                                paleontológicos de la zona y ocupa 213 800 ha.
+                                </p>
+                            </div>
+                            <a href="secciones/section2.html" class="boton-info">Mas información</a>
+                        </div>    
+                    </div>
+                    <div class="d3 col-12 col-lg-6">
+                        <div data-aos="fade-right" data-aos-duration="1250" class="arriba--izquierda">
+                            <div class="info-lugares">
+                                <p>El glaciar Perito Moreno es una gruesa masa de hielo ubicada en el departamento Lago Argentino de 
+                                la provincia de Santa Cruz, en el sudoeste de la Argentina, en la región de la Patagonia.
+                                Se integra dentro del parque nacional Los Glaciares. Este glaciar se origina en el campo de hielo Patagónico Sur.
+                                </p>
+                            </div>
+                            <a href="secciones/section3.html" class="boton-info">Mas información</a>
                         </div>
-                        <a href="secciones/section2.html" class="boton-info">Mas información</a>
-                     </div>    
-                </div>
-                <div class="d3">
-                    <div data-aos="fade-left" data-aos-duration="1250" class="arriba--izquierda">
-                        <div class="info-lugares">
-                            <p>El glaciar Perito Moreno es una gruesa masa de hielo ubicada en el departamento Lago Argentino de 
-                            la provincia de Santa Cruz, en el sudoeste de la Argentina, en la región de la Patagonia.
-                            Se integra dentro del parque nacional Los Glaciares. Este glaciar se origina en el campo de hielo Patagónico Sur.
-                            </p>
-                        </div>
-                        <a href="secciones/section3.html" class="boton-info">Mas información</a>
                     </div>    
-                </div>
-                <div class="d4">
-                    <div data-aos="fade-right" data-aos-duration="1250" class="abajo--izquierda">
-                        <div class="info-lugares">
-                            <p>El Parque Provincial de Ischigualasto, también llamado Valle de la Luna, se ubica en el noroeste de Argentina. Sus paisajes desérticos similares a la superficie lunar tienen formaciones rocosas impresionantes en áreas como el “Valle Pintado” y la “Cancha de Bochas”. En el museo del parque, se exhiben fósiles de dinosaurios del período Triásico.
-                            </p>
-                        </div>
-                        <a href="secciones/section3.html" class="boton-info">Mas información</a>
-                    </div>    
-                </div>
-                <div class="d5">
-                    <div data-aos="fade-left" data-aos-duration="1250" class="arriba--izquierda">
-                        <div class="info-lugares">
-                            <p>
-                                Las cataratas del Iguazú,son un conjunto de cataratas que se localizan sobre el río Iguazú, en el límite entre la provincia argentina de Misiones y el estado brasileño de Paraná. Están totalmente insertadas en áreas protegidas; el sector de la Argentina se encuentra dentro del parque nacional Iguazú, mientras que el de Brasil se encuentra en el parque nacional do Iguaçu. Fueron elegidas como una de las «Siete maravillas naturales del mundo».
-                            </p>
-                        </div>
-                        <a href="secciones/section3.html" class="boton-info">Mas información</a>
-                    </div>    
+                    <div class="d4 col-12 col-lg-6">
+                        <div data-aos="fade-right" data-aos-duration="1250" class="abajo--izquierda">
+                            <div class="info-lugares">
+                                <p>El Parque Provincial de Ischigualasto, también llamado Valle de la Luna, se ubica en el noroeste de Argentina. Sus paisajes desérticos similares a la superficie lunar tienen formaciones rocosas impresionantes en áreas como el “Valle Pintado” y la “Cancha de Bochas”. En el museo del parque, se exhiben fósiles de dinosaurios del período Triásico.
+                                </p>
+                            </div>
+                            <a href="secciones/section3.html" class="boton-info">Mas información</a>
+                        </div>    
+                    </div>
+                    <div class="d5 col-12 col-lg-6">
+                        <div data-aos="fade-right" data-aos-duration="1250" class="arriba--izquierda">
+                            <div class="info-lugares">
+                                <p>
+                                    Las cataratas del Iguazú,son un conjunto de cataratas que se localizan sobre el río Iguazú, en el límite entre la provincia argentina de Misiones y el estado brasileño de Paraná. Están totalmente insertadas en áreas protegidas; el sector de la Argentina se encuentra dentro del parque nacional Iguazú, mientras que el de Brasil se encuentra en el parque nacional do Iguaçu. Fueron elegidas como una de las «Siete maravillas naturales del mundo».
+                                </p>
+                            </div>
+                            <a href="secciones/section3.html" class="boton-info">Mas información</a>
+                        </div>    
+                    </div>
                 </div>
             </section>
         </main>
@@ -121,6 +124,7 @@
                 </div>
             </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
