--- a/secciones/section5.html
+++ b/secciones/section5.html
@@ -58,14 +58,14 @@
                 <h1 class="seccion-lugares--h1">Cataratas de Iguazu</h1>
                 <img class="img-lugares" src="../imagenes/cataratas3.jpg" alt="cataratas del iguazu">
                 <p data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--p"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, iusto optio? Consequuntur id asperiores qui earum ipsa tempora assumenda minus adipisci non quibusdam, magnam amet atque eius aspernatur omnis perferendis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis temporibus inventore architecto, dolor autem tempora suscipit a itaque facilis sunt minima sequi doloribus, ad doloremque enim. Est, autem nemo. Quis.</p>
-                <h2 data-aos="fade-left" data-aos-duration="1250" class="seccion-lugares--h2">Atracciones principales</h2>
+                <h2 data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--h2">Atracciones principales</h2>
                 <p data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate mollitia quo eligendi fugit rem illum ducimus nesciunt quia iste ad nemo molestias ratione exercitationem rerum, quibusdam distinctio consequuntur optio accusantium.</p>
-                <h2 data-aos="fade-left" data-aos-duration="1250" class="seccion-lugares--h2">Cómo llegar</h2>
+                <h2 data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--h2">Cómo llegar</h2>
                 <p data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex iusto laborum harum. Quam pariatur, delectus id aut quisquam repellendus fugiat error iusto ex eligendi veritatis harum repudiandae unde consectetur facere.</p>
                 <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14384.558105715636!2d-54.45875556386099!3d-25.666669138878426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94f6ea6068b8edff%3A0xa7f4a990535e7279!2sCataratas%20del%20Iguaz%C3%BA%2C%20Misiones!5e0!3m2!1ses-419!2sar!4v1647628739543!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                <h2 data-aos="fade-left" data-aos-duration="1250" class="seccion-lugares--h2">Recomendaciones</h2>
+                <h2 data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--h2">Recomendaciones</h2>
                 <p data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, unde fugit? Voluptate aliquam doloremque eveniet atque rerum repellat! Atque voluptas voluptatum iste unde quae fugiat praesentium reiciendis nihil voluptatem error.</p>
-                <h2 data-aos="fade-left" data-aos-duration="1250" class="seccion-lugares--h2">Galería</h2>
+                <h2 data-aos="fade-right" data-aos-duration="1250" class="seccion-lugares--h2">Galería</h2>
                 <ul class=ul-img-lugares>
                     <li class="ul-img-lugares--li"><img src="../imagenes/cataratas2.jpg" alt="cataratas del iguazu1"></li>
                     <li class="ul-img-lugares--li"><img src="../imagenes/cataratas3.jpg" alt="cataratas del iguazu2"></li>
