--- a/secciones/Ayuda.html
+++ b/secciones/Ayuda.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,26 +16,33 @@
     <link rel="shortcut icon" href="../imagenes/landscape.png" type="image/png" />
 </head>
 <body class="contacto">
-    <header class="navbar">
-        <ul class="navbar--ul">
-            <li class="navbar--ul--li flex1"> 
-                <a href="../index.html"><img class="img-logo" src="../imagenes/landscape.png" alt="Inicio"></a>
-            </li>
-            <li class="navbar--ul--li flex2">
-                <div class="dropdown">
-                    <button class="boton--navbar">Lugares</button>
-                    <div class="menu1">
-                        <a href="section2.html">Parque Talampaya</a>
-                        <a href="section3.html">Glaciar Perito Moreno</a>
-                        <a href="section4.html">Valle de la Luna</a>
-                        <a href="section5.html">Cataratas del Iguazú</a>
-                    </div>
-                </div>
-            </li>
-            <li class="navbar--ul--li flex3">
-                <a class="navbar--ul--li--a" href="Ayuda.html">Contacto</a>
-            </li>
-        </ul>
+    <header class="sticky-nav">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-light">
+            <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html"><img class="img-logo" src="../imagenes/landscape.png" alt="landscape"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle poppins" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Lugares
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item poppins" href="section2.html">Talampaya</a></li>
+                    <li><a class="dropdown-item poppins" href="section3.html">Glaciar Perito Moreno</a></li>
+                    <li><a class="dropdown-item poppins" href="section4.html">Valle de la Luna</a></li>
+                    <li><a class="dropdown-item poppins" href="section5.html">Cataratas del Iguazú</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link poppins" href="Ayuda.html">Contacto</a>
+                </li>
+                </ul>
+            </div>
+            </div>
+        </nav>
     </header>
     <main>
         <ul class="barra">
@@ -88,6 +96,7 @@
             </div>
         </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script>
             AOS.init();
